[build-system]
requires = ["setuptools>=61.0", "aiohttp"]
build-backend = "setuptools.build_meta"

[project]
name = "coralmc"
version = "0.0.1"
authors = [
  { name="letruxux", email=""}, {name="gigantino",email=""}
]
description = "A Python module to interact with the CoralMC API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/letruxux/coralmc"
"Bug Tracker" = "https://github.com/letruxux/coralmc/issues"
"JS/TS Version" = "https://github.com/gigantino/coralmc"
