[metadata]
name = coralmc
version = 0.0.4
description = A Python module to interact with the CoralMC API
readme = README.md
requires-python = >=3.7
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    aiohttp